- Added SharedData for MeshList, goList, gridMap
-JT

--- a/DM2242 AI Assignment/Base/Base.vcxproj.filters
+++ b/DM2242 AI Assignment/Base/Base.vcxproj.filters
@@ -87,6 +87,12 @@
     <ClCompile Include="Source\GridMap.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\MeshList.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\SharedData.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Application.h">
@@ -162,6 +168,12 @@
       <Filter>Header Files\GameObject\Entity</Filter>
     </ClInclude>
     <ClInclude Include="Source\GridMap.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\SharedData.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\MeshList.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
