- fixed ze filterzzzz i am ze bestzzzzz
-JT

--- a/DM2242 AI Assignment/Base/Base.vcxproj.filters
+++ b/DM2242 AI Assignment/Base/Base.vcxproj.filters
@@ -92,6 +92,7 @@
     </ClCompile>
     <ClCompile Include="Source\GameObject\ConveyorBelt.cpp">
       <Filter>Source Files\GameObject</Filter>
+	</ClCompile>
     <ClCompile Include="Source\MeshList.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -183,6 +184,7 @@
     </ClInclude>
     <ClInclude Include="Source\GameObject\RobotParts.h">
       <Filter>Header Files\GameObject</Filter>
+	</ClInclude>
     <ClInclude Include="Source\SharedData.h">
       <Filter>Header Files</Filter>
     </ClInclude>
