--- a/DM2242 AI Assignment/Base/Base.vcxproj.filters
+++ b/DM2242 AI Assignment/Base/Base.vcxproj.filters
@@ -92,12 +92,15 @@
     </ClCompile>
     <ClCompile Include="Source\GameObject\ConveyorBelt.cpp">
       <Filter>Source Files\GameObject</Filter>
-	</ClCompile>
+    </ClCompile>
     <ClCompile Include="Source\MeshList.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Source\SharedData.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\GameObject\Workstation.cpp">
+      <Filter>Source Files\GameObject</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -184,7 +187,7 @@
     </ClInclude>
     <ClInclude Include="Source\GameObject\RobotParts.h">
       <Filter>Header Files\GameObject</Filter>
-	</ClInclude>
+    </ClInclude>
     <ClInclude Include="Source\SharedData.h">
       <Filter>Header Files</Filter>
     </ClInclude>
