--- a/DM2242 AI Assignment/Base/Base.vcxproj.filters
+++ b/DM2242 AI Assignment/Base/Base.vcxproj.filters
@@ -99,7 +99,13 @@
     <ClCompile Include="Source\SharedData.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\GameObject\Entity\Pathfinder.cpp">
+      <Filter>Source Files\GameObject\Entity</Filter>
+    </ClCompile>
     <ClCompile Include="Source\GameObject\Workstation.cpp">
+      <Filter>Source Files\GameObject</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\GameObject\Toilet.cpp">
       <Filter>Source Files\GameObject</Filter>
     </ClCompile>
   </ItemGroup>
@@ -182,9 +188,6 @@
     <ClInclude Include="Source\GameObject\ConveyorBelt.h">
       <Filter>Header Files\GameObject</Filter>
     </ClInclude>
-    <ClInclude Include="Source\GameObject\Toilet.h">
-      <Filter>Header Files\GameObject\Entity</Filter>
-    </ClInclude>
     <ClInclude Include="Source\GameObject\RobotParts.h">
       <Filter>Header Files\GameObject</Filter>
     </ClInclude>
@@ -193,6 +196,9 @@
     </ClInclude>
     <ClInclude Include="Source\MeshList.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\GameObject\Toilet.h">
+      <Filter>Header Files\GameObject</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
