--- a/DM2242 AI Assignment/Base/Base.vcxproj
+++ b/DM2242 AI Assignment/Base/Base.vcxproj
@@ -13,7 +13,9 @@
   <ItemGroup>
     <ClCompile Include="Source\Application.cpp" />
     <ClCompile Include="Source\Camera.cpp" />
+    <ClCompile Include="Source\GameObject\BuildingBlockStack.cpp" />
     <ClCompile Include="Source\GameObject\ConveyorBelt.cpp" />
+    <ClCompile Include="Source\GameObject\DeliveryTruck.cpp" />
     <ClCompile Include="Source\GameObject\Entity\DeliveryMan.cpp" />
     <ClCompile Include="Source\GameObject\Entity\Entity.cpp" />
     <ClCompile Include="Source\GameObject\Entity\Machine.cpp" />
@@ -23,6 +25,7 @@
     <ClCompile Include="Source\GameObject\Entity\ScrapMan.cpp" />
     <ClCompile Include="Source\GameObject\Entity\Worker.cpp" />
     <ClCompile Include="Source\GameObject\GameObject.cpp" />
+    <ClCompile Include="Source\GameObject\Ornament.cpp" />
     <ClCompile Include="Source\GameObject\RobotParts.cpp" />
     <ClCompile Include="Source\GameObject\Toilet.cpp" />
     <ClCompile Include="Source\GameObject\Workstation.cpp" />
@@ -42,7 +45,9 @@
   <ItemGroup>
     <ClInclude Include="Source\Application.h" />
     <ClInclude Include="Source\Camera.h" />
+    <ClInclude Include="Source\GameObject\BuildingBlockStack.h" />
     <ClInclude Include="Source\GameObject\ConveyorBelt.h" />
+    <ClInclude Include="Source\GameObject\DeliveryTruck.h" />
     <ClInclude Include="Source\GameObject\Entity\DeliveryMan.h" />
     <ClInclude Include="Source\GameObject\Entity\Entity.h" />
     <ClInclude Include="Source\GameObject\Entity\Machine.h" />
@@ -52,6 +57,7 @@
     <ClInclude Include="Source\GameObject\Entity\ScrapMan.h" />
     <ClInclude Include="Source\GameObject\Entity\Worker.h" />
     <ClInclude Include="Source\GameObject\GameObject.h" />
+    <ClInclude Include="Source\GameObject\Ornament.h" />
     <ClInclude Include="Source\GameObject\RobotParts.h" />
     <ClInclude Include="Source\GameObject\Toilet.h" />
     <ClInclude Include="Source\GameObject\Workstation.h" />
