--- a/DM2242 AI Assignment/Base/Base.vcxproj
+++ b/DM2242 AI Assignment/Base/Base.vcxproj
@@ -27,6 +27,7 @@
     <ClCompile Include="Source\GameObject\GameObject.cpp" />
     <ClCompile Include="Source\GameObject\Ornament.cpp" />
     <ClCompile Include="Source\GameObject\RobotParts.cpp" />
+    <ClCompile Include="Source\GameObject\ScrapPile.cpp" />
     <ClCompile Include="Source\GameObject\Toilet.cpp" />
     <ClCompile Include="Source\GameObject\Workstation.cpp" />
     <ClCompile Include="Source\GridMap.cpp" />
@@ -59,6 +60,7 @@
     <ClInclude Include="Source\GameObject\GameObject.h" />
     <ClInclude Include="Source\GameObject\Ornament.h" />
     <ClInclude Include="Source\GameObject\RobotParts.h" />
+    <ClInclude Include="Source\GameObject\ScrapPile.h" />
     <ClInclude Include="Source\GameObject\Toilet.h" />
     <ClInclude Include="Source\GameObject\Workstation.h" />
     <ClInclude Include="Source\GridMap.h" />
