- MAJOR KERMIT - improved pathfinding - added class to manage the ornaments and building blocks - added most of Robot's awesome FSM stuff - added discard to shader to remove blending issues - added useless readme
-JT

--- a/DM2242 AI Assignment/Base/Base.vcxproj
+++ b/DM2242 AI Assignment/Base/Base.vcxproj
@@ -26,6 +26,7 @@
     <ClCompile Include="Source\GameObject\Entity\Worker.cpp" />
     <ClCompile Include="Source\GameObject\GameObject.cpp" />
     <ClCompile Include="Source\GameObject\Ornament.cpp" />
+    <ClCompile Include="Source\GameObject\OrnamentBuildingSystem.cpp" />
     <ClCompile Include="Source\GameObject\RobotParts.cpp" />
     <ClCompile Include="Source\GameObject\ScrapPile.cpp" />
     <ClCompile Include="Source\GameObject\Toilet.cpp" />
@@ -59,6 +60,7 @@
     <ClInclude Include="Source\GameObject\Entity\Worker.h" />
     <ClInclude Include="Source\GameObject\GameObject.h" />
     <ClInclude Include="Source\GameObject\Ornament.h" />
+    <ClInclude Include="Source\GameObject\OrnamentBuildingSystem.h" />
     <ClInclude Include="Source\GameObject\RobotParts.h" />
     <ClInclude Include="Source\GameObject\ScrapPile.h" />
     <ClInclude Include="Source\GameObject\Toilet.h" />
