- acknowledged messages are rendered in green instead of black - fixed pathfinding checking of reaching next node in path

--- a/DM2242 AI Assignment/Base/Base.vcxproj
+++ b/DM2242 AI Assignment/Base/Base.vcxproj
@@ -57,6 +57,7 @@
     <ClInclude Include="Source\GameObject\ConveyorBelt.h" />
     <ClInclude Include="Source\GameObject\DeliveryTruck.h" />
     <ClInclude Include="Source\GameObject\Entity\DeliveryMan.h" />
+    <ClInclude Include="Source\GameObject\Entity\Direction.h" />
     <ClInclude Include="Source\GameObject\Entity\Entity.h" />
     <ClInclude Include="Source\GameObject\Entity\Machine.h" />
     <ClInclude Include="Source\GameObject\Entity\MaintenanceMan.h" />
